- Download is not downloading complete file!

## Missing features
Panda-Tray:
- Favourites (link to digital panda should be added)
- I think the panda should ask before updating - but that can wait until we have something more stable
- Status: speed uploading, files up to date etc.
- Look if there's a better way to detect online changes than iterating through everything
- Double click the panda, should open panda folder
- Account settings should be an additinoal tab away


## Panda-Tray:

0.14
* Bug fixes:
- Downloads were coming down incomplete - added check to ensure that file hashes match

0.13
* Bug fixes:
- Downloads and uploads can be interrupted, so that panda tray doesn't keep running in background
* New functionality
- Local files are moved to recycle bin instead of being deleted
- More detailed status updates (filename of what is being uploaded,deleted,downloaded), and download 
  progress & speed

0.12
* Bug fixes:
- Fixed some bugs syncing containers that contain spaces
- Fixed a unicode bug that broken syncing local db

0.11
* Bug fixes:
- Fixed bugs around folder syncing (deleting folders locally - wouldn't sync correctly remotely)
* New functionality
- User agent added on swift calls ; attempt to override default for esky

0.10
* Bug fixes:
- Changed panda in tray icon menu, so it doesn't look like it's crying anymore
* New funtionality
- New version of panda head for small icons
- Added Storage provider setting
- More informative status messages w.r.t connection attemps
- Status messages now include checking for updates

0.9
* Bug fixes:
- Application now works for all users
- Syncronisation now works a bit better
- Changing login credentials now works better (no need to exit and restart)
- Status updates formatting fixed
* New functionality
- The panda is less chatty - it sleeps for a while after uploading/downloading
- Checking for updates before doing anything else

0.5
Bug fixes:
- 
New functionality:
- only allows one instance to run at a time