@@ -1,0 +1,7 @@
+body {
+	background-color:#FF0000;
+	background-image:none;
+}
+div {
+	font-size: 30pt;
+}
