@@ -1,0 +1,20 @@
+body {
+	background-color:#00FF00;
+	background-image:none;
+}
+div {
+	font-size: 20pt;
+}
+div.logoWordsDigital {
+	margin-top:10px;
+}
+div.logoWordsPanda {
+	margin-left:2px;
+    margin-top:0px;
+    width: 200px;
+}
+div.logoBlurb {
+	width:200px;
+	margin-top:2px;
+	margin-left:2px;
+}
