@@ -1,0 +1,7 @@
+body {
+	background-color:#0000FF;
+	background-image:none;
+}
+div {
+	font-size: 12pt;
+}
