@@ -55,16 +55,306 @@ background-color:red;
 z-index:100;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+body {
+position:relative;
+margin:0;
+padding:0;
+background-color:#000000;
+background-image:url(../images/bground.jpg);
+background-position:top center;
+background-repeat:no-repeat;
+font-family:arial;
+color:#666666;
+}
+a:link {
+color:#4f881d;
+text-decoration:none;
+}
+a:active {
+color:#4f881d;
+text-decoration:none;
+}
+a:hover {
+color:#272727;
+text-decoration:underline;
+}
+a:visited {
+color:#4f881d;
+text-decoration:none;
+}
+div.header {
+position:absolute;
+top:0px;
+width:100%;
+height:140px;
+background-image:url(../images/headerSlice.png);
+background-repeat:repeat-x;
+z-index:100;
+}
+div.logoContainer {
+    position:relative;
+    /*
+    position:relative;
+    margin:10px auto 0;
+    padding-top:82px;
+    padding-left:87px;
+    width:753px;
+    height:38px;
+    background-image:url(../images/digitalPandaLogo.png);
+    background-repeat:no-repeat;
+    color:#ffffff;
+    font-size:13px;
+    */
+}
+div.logoPanda {
+    float: left;
+    margin-left:4px;
+    margin-top:10px;
+    position:relative;
+    background-image:url(../images/digitalPandaLogo_panda.png);
+    background-repeat:no-repeat;
+    width:84px;
+    height:110px;
+}
+div.logoWordsDigital {
+    float: left;
+    position:relative;
+    background-image:url(../images/digitalPandaLogo_words_digital.png);
+    background-repeat:no-repeat;
+    width:149px;
+    height:41px;
+    margin-top:50px;
+}
+div.logoWordsPanda {
+    float: left;
+    position:relative;
+    color:#ffffff;
+    background-image:url(../images/digitalPandaLogo_words_panda.png);
+    background-repeat:no-repeat;
+    width:132px;
+    height:38px;
+    margin-top:50px;
+}
+div.logoBlurb {
+    float: left;
+    font-size:13px;
+    color:#ffffff;
+    margin-top:0px;
+}
+div.pageContainer {
+position:relative;
+margin:0 auto;
+padding-top:131px;
+width:900px;
+}
+div.pageBody {
+position:relative;
+padding:30px;
+width:840px;
+height:430px;
+background-color:#ffffff;
+}
+div.footer {
+position:relative;
+padding-left:30px;
+padding-right:30px;
+padding-top:10px;
+width:840px;
+height:110px;
+background-image:url(../images/footerSlice.png);
+background-repeat:repeat-x;
+text-align:center;
+font-size:12px;
+color:#a8a8a8;
+}
+div.footer a:link {
+color:#a8a8a8;
+text-decoration:none;
+}
+div.footer a:visted {
+color:#a8a8a8;
+text-decoration:none;
+}
+div.footer a:active {
+color:#a8a8a8;
+text-decoration:none;
+}
+div.footer a:hover {
+color:#ffffff;
+text-decoration:underline;
+}
+div.downloadBlock {
+position:relative;
+float:left;
+width:582px;
+height:191px;
+padding-top:15px;
+padding-right:15px;
+background-image:url(../images/downloadblockbg.jpg);
+background-repeat:no-repeat;
+}
+div.whatIs {
+float:right;
+clear:both;
+position:relative;
+padding-top:30px;
+width:325px;
+background-image:url(../images/whatisdigitalpanda.png);
+background-repeat:no-repeat;
+background-position:top left;
+}
+h1 {
+font-size:14px;
+color:#666666;
+font-weight:normal;
+padding:0px;
+margin:0px;
+margin-top:5px;
+}
+h2 {
+font-size:28px;
+color:#4f881d;
+font-weight:normal;
+padding:0px;
+margin:0px;
+}
+h3 {
+margin:auto 0;
+color:#4f881d;
+font-size:12px;
+font-weight:normal;
+margin:2px;
+padding:0px;
+width:84px;
+text-align:center;
+}
+div.downloadBigContainer {
+float:right;
+clear:both;
+position:relative;
+width:243px;
+margin-right:82px;
+margin-top:30px;
+}
+div.downloadBig {
+float:left;
+width:243px;
+height:52px;
+background-image:url(../images/downloadDigitalPanda.png);
+background-repeat:no-repeat;
+background-position:top center;
+cursor:pointer;
+}
+div.downloadBig:hover {
+background-position:bottom center;
+}
+div.version {
+float:left;
+margin-left:46px;
+margin-top:28px;
+color:#6eb63d;
+font-size:14px;
+}
+div.dwnldReflection {
+float:left;
+width:243px;
+height:23px;
+background-image:url(../images/reflection.png);
+background-repeat:no-repeat;
+background-position:center -2px;
+}
+div.otherVersions {
+position:relative;
+float:left;
+margin-top:30px;
+width:597px;
+}
+div.versionContainer {
+float:left;
+width:597px;
+position:relative;
+margin-top:20px;
+}
+div.versionSelect {
+position:relative;
+float:left;
+margin-right:30px;
+width:88px;
+border:1px solid #cacaca;
+border-radius:5px;
+overflow:hidden;
+background-color:#f4f4f4;
+}
+div.vLogo {
+float:left;
+background-color:#ffffff;
+width:68px;
+padding:10px;
+}
+div.vTitle {
+float:left;
+}
+div.vDownloadBtn {
+float:left;
+width:79px;
+height:18px;
+margin:4px;
+margin-top:10px;
+background-image:url(../images/download.png);
+background-repeat:no-repeat;
+background-position:top center;
+cursor:pointer;
+}
+div.vDownloadBtn:hover {
+background-position:bottom center;
+}
+div.vContributeBtn {
+float:left;
+width:79px;
+height:18px;
+margin:4px;
+margin-top:10px;
+background-image:url(../images/contribute.png);
+background-repeat:no-repeat;
+background-position:bottom center;
+cursor:pointer;
+}
+div.vContributeBtn:hover {
+background-position:top center;
+}
+div.RHS {
+position:relative;
+float:right;
+width:212px;
+}
+div.LHS {
+position:relative;
+float:left;
+width:600px;
+}
+div.RHSbtn {
+position:relative;
+float:left;
+width:210px;
+height:31px;
+margin-top:15px;
+padding:1px;
+background-image:url(../images/rhsbutton.png);
+background-repeat:no-repeat;
+background-position:top center;
+overflow:hidden;
+cursor:pointer;
+}
+div.RHSbtn:hover {
+background-position:bottom center;
+}
+div.descbox {
+float:left;
+position:relative;
+border:1px solid #cacaca;
+border-radius:5px;
+overflow:hidden;
+width:210px;
+margin-top:15px;
+font-size:13px;
+}
