@@ -1,0 +1,27 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
+        <meta name="description" content="Description: Digital Panda is a cloud synchronization tool that syncs with OpenStack Swift. License: Open Source, Platform: Windows"/>
+		<link rel="stylesheet" type="text/css" media="screen" href="css/styles.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 800px)" href="css/style800.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 400px)" href="css/style400.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 240px)" href="css/style240.css"/>
+        <title>Digital Panda</title>
+    </head>
+    <body>
+    	<div class="header">
+            <div class="logoContainer">
+                <div class="logoPanda"></div>
+                <div class="logoWordsDigital"></div>
+                <div class="logoWordsPanda"></div>
+                <div class="logoBlurb">CLOUD. STORE. SYNC.</div>
+            <div>
+            <!--
+			<div class="logoContainer">
+				STORE. SYNC.
+			</div>-->
+		</div>
+    </body>
+</html>
