@@ -32,6 +32,7 @@ Panda-Tray:
 - Look if there's a better way to detect online changes than iterating through everything
 - Double click the panda, should open panda folder
 - Account settings should be an additinoal tab away
+- Restart application after update
 
 
 ## Panda-Tray:
